--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <link rel="icon" href="img/portfolio.jpg" />
 <title>My Portfolio!</title>
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" media= "screen and (max-width:900px)" href="css/phone.css">
+<link rel="stylesheet" media= "screen and (max-width:695px)" href="css/phone1.css">
+<link rel="stylesheet" media= "screen and (max-width:1170px)" href="css/tablet.css">
 </head>
 <body>
 <nav class="navbar">
